--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -309,7 +309,7 @@
        <rect>
         <x>50</x>
         <y>10</y>
-        <width>421</width>
+        <width>520</width>
         <height>41</height>
        </rect>
       </property>
@@ -325,10 +325,10 @@
      <widget class="QPushButton" name="addButton">
       <property name="geometry">
        <rect>
-        <x>520</x>
-        <y>30</y>
-        <width>121</width>
-        <height>101</height>
+        <x>600</x>
+        <y>20</y>
+        <width>120</width>
+        <height>100</height>
        </rect>
       </property>
       <property name="text">
@@ -338,10 +338,10 @@
      <widget class="QPushButton" name="deleteButton">
       <property name="geometry">
        <rect>
-        <x>520</x>
-        <y>160</y>
-        <width>121</width>
-        <height>101</height>
+        <x>600</x>
+        <y>130</y>
+        <width>120</width>
+        <height>100</height>
        </rect>
       </property>
       <property name="text">
@@ -351,10 +351,10 @@
      <widget class="QPushButton" name="clearButton">
       <property name="geometry">
        <rect>
-        <x>520</x>
-        <y>290</y>
-        <width>121</width>
-        <height>101</height>
+        <x>600</x>
+        <y>240</y>
+        <width>120</width>
+        <height>100</height>
        </rect>
       </property>
       <property name="text">
@@ -366,7 +366,7 @@
        <rect>
         <x>50</x>
         <y>50</y>
-        <width>421</width>
+        <width>520</width>
         <height>421</height>
        </rect>
       </property>
@@ -388,15 +388,44 @@
        <number>35</number>
       </attribute>
      </widget>
+     <widget class="QPushButton" name="sendButton">
+      <property name="geometry">
+       <rect>
+        <x>600</x>
+        <y>350</y>
+        <width>120</width>
+        <height>100</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Send</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="listSentLabel">
+      <property name="geometry">
+       <rect>
+        <x>589</x>
+        <y>456</y>
+        <width>141</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="settings">
      <widget class="QPushButton" name="exitButton">
       <property name="geometry">
        <rect>
-        <x>580</x>
-        <y>390</y>
-        <width>141</width>
-        <height>81</height>
+        <x>600</x>
+        <y>400</y>
+        <width>130</width>
+        <height>70</height>
        </rect>
       </property>
       <property name="text">
@@ -406,10 +435,10 @@
      <widget class="QLineEdit" name="zipEdit">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>120</y>
-        <width>91</width>
-        <height>41</height>
+        <x>160</x>
+        <y>90</y>
+        <width>90</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -425,14 +454,14 @@
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>0</y>
-        <width>261</width>
-        <height>61</height>
+        <y>10</y>
+        <width>260</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>15</pointsize>
        </font>
       </property>
       <property name="text">
@@ -445,11 +474,16 @@
      <widget class="QLabel" name="weatherLabel">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>80</y>
+        <x>110</x>
+        <y>60</y>
         <width>101</width>
         <height>21</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Weather</string>
@@ -461,8 +495,8 @@
      <widget class="QLabel" name="zipLabel">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>128</y>
+        <x>30</x>
+        <y>98</y>
         <width>91</width>
         <height>21</height>
        </rect>
@@ -474,8 +508,8 @@
      <widget class="QPushButton" name="fullscreenOnButton">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>190</y>
+        <x>160</x>
+        <y>151</y>
         <width>60</width>
         <height>40</height>
        </rect>
@@ -499,10 +533,10 @@
      <widget class="QLabel" name="fullscreenLabel">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>199</y>
-        <width>91</width>
-        <height>21</height>
+        <x>30</x>
+        <y>160</y>
+        <width>90</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
@@ -512,8 +546,8 @@
      <widget class="QPushButton" name="fullscreenOffButton">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>190</y>
+        <x>220</x>
+        <y>151</y>
         <width>60</width>
         <height>40</height>
        </rect>
@@ -531,8 +565,8 @@
      <widget class="QPushButton" name="saveZipButton">
       <property name="geometry">
        <rect>
-        <x>270</x>
-        <y>120</y>
+        <x>260</x>
+        <y>90</y>
         <width>60</width>
         <height>41</height>
        </rect>
@@ -544,8 +578,8 @@
      <widget class="QPushButton" name="rotateCameraOnButton">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>250</y>
+        <x>160</x>
+        <y>210</y>
         <width>60</width>
         <height>40</height>
        </rect>
@@ -569,8 +603,8 @@
      <widget class="QPushButton" name="rotateCameraOffButton">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>250</y>
+        <x>220</x>
+        <y>210</y>
         <width>60</width>
         <height>40</height>
        </rect>
@@ -591,10 +625,10 @@
      <widget class="QLabel" name="rotateCameraLabel">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>260</y>
-        <width>121</width>
-        <height>16</height>
+        <x>30</x>
+        <y>220</y>
+        <width>120</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -604,8 +638,8 @@
      <widget class="QPushButton" name="hideCursorOffButton">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>310</y>
+        <x>220</x>
+        <y>270</y>
         <width>60</width>
         <height>40</height>
        </rect>
@@ -626,8 +660,8 @@
      <widget class="QPushButton" name="hideCursorOnButton">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>310</y>
+        <x>160</x>
+        <y>270</y>
         <width>60</width>
         <height>40</height>
        </rect>
@@ -651,10 +685,10 @@
      <widget class="QLabel" name="hideCursorLabel">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>321</y>
-        <width>101</width>
-        <height>16</height>
+        <x>30</x>
+        <y>280</y>
+        <width>100</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -665,7 +699,7 @@
       <property name="geometry">
        <rect>
         <x>390</x>
-        <y>80</y>
+        <y>70</y>
         <width>91</width>
         <height>16</height>
        </rect>
@@ -678,9 +712,9 @@
       <property name="geometry">
        <rect>
         <x>380</x>
-        <y>100</y>
+        <y>90</y>
         <width>120</width>
-        <height>130</height>
+        <height>141</height>
        </rect>
       </property>
      </widget>
@@ -688,7 +722,7 @@
       <property name="geometry">
        <rect>
         <x>570</x>
-        <y>80</y>
+        <y>70</y>
         <width>91</width>
         <height>16</height>
        </rect>
@@ -701,9 +735,9 @@
       <property name="geometry">
        <rect>
         <x>560</x>
-        <y>100</y>
+        <y>90</y>
         <width>120</width>
-        <height>130</height>
+        <height>141</height>
        </rect>
       </property>
      </widget>
@@ -747,7 +781,7 @@
       <property name="geometry">
        <rect>
         <x>370</x>
-        <y>350</y>
+        <y>365</y>
         <width>151</width>
         <height>16</height>
        </rect>
@@ -763,7 +797,7 @@
       <property name="geometry">
        <rect>
         <x>500</x>
-        <y>100</y>
+        <y>90</y>
         <width>40</width>
         <height>60</height>
        </rect>
@@ -781,7 +815,7 @@
       <property name="geometry">
        <rect>
         <x>500</x>
-        <y>160</y>
+        <y>150</y>
         <width>40</width>
         <height>60</height>
        </rect>
@@ -812,7 +846,7 @@
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>100</y>
+        <y>90</y>
         <width>40</width>
         <height>60</height>
        </rect>
@@ -830,7 +864,7 @@
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>160</y>
+        <y>150</y>
         <width>40</width>
         <height>60</height>
        </rect>
@@ -897,7 +931,7 @@
       <property name="geometry">
        <rect>
         <x>550</x>
-        <y>350</y>
+        <y>365</y>
         <width>151</width>
         <height>16</height>
        </rect>
@@ -907,6 +941,236 @@
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="rightButton">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>420</y>
+        <width>50</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>►</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="leftButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>420</y>
+        <width>50</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>◄</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="settings2">
+     <widget class="QLineEdit" name="authLineEdit">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>150</y>
+        <width>230</width>
+        <height>40</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="authLabel">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>160</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Auth Token:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="weatherLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>60</y>
+        <width>181</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>SMS</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="smsApplyButton">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>300</y>
+        <width>231</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Apply</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="sidLineEdit">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>100</y>
+        <width>230</width>
+        <height>40</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="sidLabel">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>110</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>SID:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="settingsLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>10</y>
+        <width>260</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>15</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Settings</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="leftButton2">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>420</y>
+        <width>50</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>◄</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="rightButton2">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>420</y>
+        <width>50</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>►</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="fromNumberLineEdit">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>200</y>
+        <width>230</width>
+        <height>40</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="toNumberLineEdit">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>250</y>
+        <width>230</width>
+        <height>40</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="fromLabel">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>210</y>
+        <width>56</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>From:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>260</y>
+        <width>56</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>To:</string>
       </property>
      </widget>
     </widget>
