--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,17 +98,27 @@
      <widget class="QPushButton" name="scanButton">
       <property name="geometry">
        <rect>
-        <x>400</x>
-        <y>310</y>
-        <width>271</width>
-        <height>131</height>
+        <x>420</x>
+        <y>287</y>
+        <width>261</width>
+        <height>161</height>
        </rect>
       </property>
       <property name="font">
        <font/>
       </property>
       <property name="text">
-       <string>SCAN</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/barcode.png</normaloff>icons/barcode.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>200</width>
+        <height>200</height>
+       </size>
       </property>
      </widget>
      <widget class="QWidget" name="verticalLayoutWidget_2">
@@ -187,7 +197,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Update</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/update.png</normaloff>icons/update.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>35</width>
+        <height>35</height>
+       </size>
       </property>
      </widget>
     </widget>
@@ -226,7 +246,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Add</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/add.png</normaloff>icons/add.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>35</width>
+        <height>35</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="invDeleteButton">
@@ -239,13 +269,23 @@
        </rect>
       </property>
       <property name="text">
-       <string>Delete</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/delete.png</normaloff>icons/delete.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>35</width>
+        <height>35</height>
+       </size>
       </property>
      </widget>
      <widget class="QLineEdit" name="invSearchLineEdit">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>180</x>
         <y>440</y>
         <width>272</width>
         <height>41</height>
@@ -263,14 +303,24 @@
      <widget class="QPushButton" name="invFindButton">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>450</x>
         <y>440</y>
-        <width>250</width>
+        <width>91</width>
         <height>41</height>
        </rect>
       </property>
       <property name="text">
-       <string>Find</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/search.png</normaloff>icons/search.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>305</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="invInstructionsButton">
@@ -283,7 +333,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Instruct</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/instructions.png</normaloff>icons/instructions.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton">
@@ -332,7 +392,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Add</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/add.png</normaloff>icons/add.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="deleteButton">
@@ -345,7 +415,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Delete</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/delete.png</normaloff>icons/delete.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="clearButton">
@@ -358,7 +438,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Clear</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/clear.png</normaloff>icons/clear.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>70</width>
+        <height>70</height>
+       </size>
       </property>
      </widget>
      <widget class="QTableView" name="listTable">
@@ -398,7 +488,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Send</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/send.png</normaloff>icons/send.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
       </property>
      </widget>
      <widget class="QLabel" name="listSentLabel">
@@ -572,7 +672,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Save</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/save.png</normaloff>icons/save.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="rotateCameraOnButton">
@@ -698,7 +808,7 @@
      <widget class="QLabel" name="categoriesLabel">
       <property name="geometry">
        <rect>
-        <x>390</x>
+        <x>380</x>
         <y>70</y>
         <width>91</width>
         <height>16</height>
@@ -711,7 +821,7 @@
      <widget class="QListWidget" name="categoriesListWidget">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>370</x>
         <y>90</y>
         <width>120</width>
         <height>141</height>
@@ -744,7 +854,7 @@
      <widget class="QLineEdit" name="categoriesLineEdit">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>370</x>
         <y>230</y>
         <width>120</width>
         <height>31</height>
@@ -754,27 +864,44 @@
      <widget class="QPushButton" name="categoriesAddButton">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>370</x>
         <y>260</y>
         <width>60</width>
         <height>40</height>
        </rect>
       </property>
-      <property name="text">
-       <string>Add</string>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/add.png</normaloff>icons/add.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="categoriesDeleteButton">
       <property name="geometry">
        <rect>
-        <x>440</x>
+        <x>430</x>
         <y>260</y>
         <width>60</width>
         <height>40</height>
        </rect>
       </property>
       <property name="text">
-       <string>Delete</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/delete.png</normaloff>icons/delete.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QLabel" name="categoriesInfoLabel">
@@ -796,7 +923,7 @@
      <widget class="QPushButton" name="categoriesUpButton">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>490</x>
         <y>90</y>
         <width>40</width>
         <height>60</height>
@@ -814,7 +941,7 @@
      <widget class="QPushButton" name="categoriesDownButton">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>490</x>
         <y>150</y>
         <width>40</width>
         <height>60</height>
@@ -832,14 +959,24 @@
      <widget class="QPushButton" name="categoriesSaveButton">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>370</x>
         <y>300</y>
         <width>120</width>
         <height>40</height>
        </rect>
       </property>
       <property name="text">
-       <string>Save</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/save.png</normaloff>icons/save.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="locationsUpButton">
@@ -888,7 +1025,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Save</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/save.png</normaloff>icons/save.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QLineEdit" name="locationsLineEdit">
@@ -911,7 +1058,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Add</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/add.png</normaloff>icons/add.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="locationsDeleteButton">
@@ -924,7 +1081,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Delete</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/delete.png</normaloff>icons/delete.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QLabel" name="locationsInfoLabel">
@@ -989,7 +1156,7 @@
        <rect>
         <x>120</x>
         <y>150</y>
-        <width>230</width>
+        <width>300</width>
         <height>40</height>
        </rect>
       </property>
@@ -1031,14 +1198,24 @@
      <widget class="QPushButton" name="smsApplyButton">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>300</y>
-        <width>231</width>
-        <height>71</height>
+        <x>340</x>
+        <y>210</y>
+        <width>61</width>
+        <height>61</height>
        </rect>
       </property>
       <property name="text">
-       <string>Apply</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/save.png</normaloff>icons/save.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
      <widget class="QLineEdit" name="sidLineEdit">
@@ -1046,7 +1223,7 @@
        <rect>
         <x>120</x>
         <y>100</y>
-        <width>230</width>
+        <width>300</width>
         <height>40</height>
        </rect>
       </property>
@@ -1132,7 +1309,7 @@
        <rect>
         <x>120</x>
         <y>200</y>
-        <width>230</width>
+        <width>200</width>
         <height>40</height>
        </rect>
       </property>
@@ -1142,7 +1319,7 @@
        <rect>
         <x>120</x>
         <y>250</y>
-        <width>230</width>
+        <width>200</width>
         <height>40</height>
        </rect>
       </property>
@@ -1273,7 +1450,13 @@
        </rect>
       </property>
       <property name="text">
-       <string>Add</string>
+       <string>OK</string>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
       </property>
      </widget>
      <widget class="QPushButton" name="manualCancelButton">
@@ -1317,7 +1500,17 @@
        </rect>
       </property>
       <property name="text">
-       <string>Barcode Scan</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/barcode.png</normaloff>icons/barcode.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>80</width>
+        <height>80</height>
+       </size>
       </property>
      </widget>
      <widget class="QDoubleSpinBox" name="quantitySpinBox">
@@ -1399,7 +1592,17 @@
      <font/>
     </property>
     <property name="text">
-     <string>HOME</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>icons/home.png</normaloff>icons/home.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>40</width>
+      <height>40</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="invButton">
@@ -1415,7 +1618,17 @@
      <font/>
     </property>
     <property name="text">
-     <string>INV</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>icons/fridge.png</normaloff>icons/fridge.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>50</width>
+      <height>50</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="listButton">
@@ -1431,7 +1644,17 @@
      <font/>
     </property>
     <property name="text">
-     <string>LIST</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>icons/list.png</normaloff>icons/list.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>50</width>
+      <height>50</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="settingsButton">
@@ -1447,7 +1670,17 @@
      <font/>
     </property>
     <property name="text">
-     <string>SETTINGS</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>icons/settings.png</normaloff>icons/settings.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>50</width>
+      <height>50</height>
+     </size>
     </property>
    </widget>
   </widget>
