--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -280,7 +280,7 @@
      <widget class="QLineEdit" name="invSearchLineEdit">
       <property name="geometry">
        <rect>
-        <x>180</x>
+        <x>230</x>
         <y>440</y>
         <width>272</width>
         <height>41</height>
@@ -298,10 +298,10 @@
      <widget class="QPushButton" name="invFindButton">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>500</x>
         <y>440</y>
-        <width>91</width>
-        <height>41</height>
+        <width>90</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="text">
@@ -322,7 +322,7 @@
       <property name="geometry">
        <rect>
         <x>682</x>
-        <y>270</y>
+        <y>240</y>
         <width>60</width>
         <height>101</height>
        </rect>
@@ -355,6 +355,29 @@
       </property>
       <property name="text">
        <string/>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="invBarcodeButton">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>440</y>
+        <width>90</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>icons/barcode.png</normaloff>icons/barcode.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
       </property>
      </widget>
     </widget>
@@ -574,11 +597,6 @@
         <width>101</width>
         <height>21</height>
        </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>8</pointsize>
-       </font>
       </property>
       <property name="text">
        <string>Weather</string>
@@ -902,10 +920,10 @@
      <widget class="QLabel" name="categoriesInfoLabel">
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>365</y>
+        <x>360</x>
+        <y>350</y>
         <width>151</width>
-        <height>16</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="text">
@@ -1093,9 +1111,9 @@
       <property name="geometry">
        <rect>
         <x>550</x>
-        <y>365</y>
+        <y>350</y>
         <width>151</width>
-        <height>16</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="text">
@@ -1454,7 +1472,7 @@
        <string>Brand</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="upcLineEdit">
+     <widget class="QLineEdit" name="barcodeLineEdit">
       <property name="geometry">
        <rect>
         <x>70</x>
@@ -1469,7 +1487,7 @@
        </font>
       </property>
       <property name="placeholderText">
-       <string>UPC</string>
+       <string>Barcode</string>
       </property>
       <property name="clearButtonEnabled">
        <bool>false</bool>
